--- a/assets/scss/common/_typography.scss
+++ b/assets/scss/common/_typography.scss
@@ -6,7 +6,9 @@
 *::after {
   box-sizing: border-box;
 }
-
+body, html{
+  overflow-x: hidden;
+}
 html {
   color: #637588;
   font-family: "Roboto", sans-serif;
